--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #2c3e50, #1a252f);
+      background: #201e30; /* هغيرنا الخلفية الأصلية عشان finisher-header هيتولى */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -16,7 +16,24 @@
       font-family: 'Cairo', sans-serif;
       color: #fff;
       overflow: hidden;
-      user-select: none; /* منع التحديد خارج المربع */
+      position: relative;
+      user-select: none;
+    }
+
+    /* الخلفية المتحركة */
+    .finisher-header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    /* عناصر التطبيق */
+    .counter, .flashcard, .buttons {
+      position: relative;
+      z-index: 1;
     }
 
     .counter {
@@ -109,7 +126,7 @@
     button:disabled {
       background-color: gray;
       cursor: not-allowed;
-      transform: none; /* لو الزرار متعطل مفيش تكبير */
+      transform: none;
     }
 
     @media (max-width: 400px) {
@@ -130,6 +147,9 @@
 </head>
 <body>
 
+  <!-- الخلفية المتحركة -->
+  <div class="finisher-header"></div>
+
   <div class="counter" id="counter">1/10</div>
 
   <div class="flashcard" id="flashcard">
@@ -148,6 +168,7 @@
     <source src="flipcard-91468.mp3" type="audio/mp3">
   </audio>  
 
+  <!-- سكريبت الفلاش كارد -->
   <script>
     const cards = [
       { question: "What are the components of the musculoskeletal system?", answer: "Skeletal system (bones), Articular system (joints), Muscular system (muscles)" },
@@ -245,6 +266,46 @@
     flashcard.addEventListener('click', flipCard);
 
     showCard(currentCard);
+  </script>
+
+  <!-- سكريبت الخلفية -->
+  <script src="finisher-header.es5.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    new FinisherHeader({
+      "count": 100,
+      "size": {
+        "min": 2,
+        "max": 8,
+        "pulse": 0
+      },
+      "speed": {
+        "x": {
+          "min": 0,
+          "max": 0.4
+        },
+        "y": {
+          "min": 0,
+          "max": 0.6
+        }
+      },
+      "colors": {
+        "background": "#201e30",
+        "particles": [
+          "#fbfcca",
+          "#d7f3fe",
+          "#ffd0a7"
+        ]
+      },
+      "blending": "overlay",
+      "opacity": {
+        "center": 1,
+        "edge": 0
+      },
+      "skew": -2,
+      "shapes": [
+        "c"
+      ]
+    });
   </script>
 
 </body>
